k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tams
  labels:
    name: tams
    app: tams-api
