k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tams-api-service
  namespace: tams
  labels:
    app: tams-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: tams-api
  sessionAffinity: None
